# dune-grid

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE.md  Makefile.am  README  README.SVN  README.md  __init__.py  _create.py  _grid.cc  _grids.py  alberta.py  alu.py  aluconform.py  alucube.py  alusimplex.py  autogen.sh  capabilities.hh  config.h.cmake  configure.ac  core.py  create.py  datahandle.py  dune-grid-config.cmake.in  dune-grid.pc.in  dune.module  entity.hh  factory.hh  function.hh  geometry.hh  grid_generator.py  gridview.hh  hierarchical.hh  idset.hh  indexset.hh  intersection.hh  (+16 more)
cmake/modules/: AddALUGridFlags.cmake  AddAlbertaFlags.cmake  AddAmiraMeshFlags.cmake  AddGrapeFlags.cmake  AddPsurfaceFlags.cmake  CMakeLists.txt  CheckExperimentalGridExtensions.cmake  DuneGridMacros.cmake  FindALUGrid.cmake  FindAlberta.cmake  FindAmiraMesh.cmake  FindGrape.cmake  FindPsurface.cmake  FindUG.cmake  GridType.cmake  Makefile.am  UseUG.cmake
doc/: .gitignore  CMakeLists.txt  Makefile.am  tripartit-coloring.org
doc/appl/: .gitignore  Makefile.am
doc/doxygen/: .gitignore  CMakeLists.txt  Doxydep  Doxyfile  Doxyfile.in  Doxylocal  Makefile.am  mainpage  mainpage.txt  modules  modules.txt
doc/grids/: CMakeLists.txt  Makefile.am
doc/latex/: .gitignore  CMakeLists.txt  Makefile.am  hybrid-grid.bib  hybrid-grid.tex
doc/recipes/: CMakeLists.txt  mainpage.txt  recipe-integration.cc  recipe-iterate-over-grid.cc
doc/refinement/: .gitignore  CMakeLists.txt  Makefile.am  refinement.tex
dune/: CMakeLists.txt  Makefile.am
dune/grid/: .gitignore  CMakeLists.txt  Makefile.am  albertagrid.hh  alugrid.hh  concepts.hh  geometrygrid.hh  identitygrid.hh  modules  modules.txt  onedgrid.hh  sgrid.hh  uggrid.hh  yaspgrid.hh
dune/python/: CMakeLists.txt
grid/: Makefile.am  albertagrid.hh  alu3dgrid.hh  alugrid.hh  geogrid.hh  geometrygrid.hh  modules  onedgrid.hh  sgrid.hh  uggrid.hh  yaspgrid.hh
grid/albertagrid/: .gitignore  Makefile.am  agcommunicator.hh  agelementindex.cc  agmemory.hh  agrid.hh  alberta_undefs.hh  albertaextra.cc  albertaextra.hh  albertagrid.cc  albertaheader.hh  albertareader.hh  algebra.hh  boundary.hh  capabilities.hh  coordcache.hh  datahandle.hh  dgfparser.hh  dofadmin.hh  dofvector.hh  elementinfo.cc  elementinfo.hh  entity.cc  entity.hh  entitypointer.cc  entitypointer.hh  exceptions.hh  geometry.cc  geometry.hh  geometrycache.hh  griddim.hh  gridfactory.hh  gridtype.hh  hierarchiciterator.cc  hierarchiciterator.hh  indexsets.hh  intersection.cc  intersection.hh  intersectioniterator.hh  leafiterator.hh  (+18 more)
grid/alu2dgrid/: entity_imp.cc  geometry_imp.cc  grid.hh  grid_imp.cc
grid/alu3dgrid/: Makefile.am  alu3dinclude.hh  alu3dutility.hh  entity.hh  grid.hh  grid_imp.cc  indexsets.hh  iterator.hh  iterator_imp.cc  topology.hh
grid/alugrid/: .gitignore  Makefile.am  defaultindexsets.hh  dynamiccodimsubindexid.hh  gridtype.hh  interfaces.hh
grid/common/: .gitignore  Makefile.am  adaptcallback.hh  boundaryprojection.hh  boundarysegment.hh  capabilities.hh  datahandleif.hh  defaultgridview.hh  defaultindexsets.hh  dynamicsubindexid.hh  entity.hh  entitypointer.hh  genericreferenceelements.cc  genericreferenceelements.hh  geometry.hh  grid.hh  gridenums.hh  gridfactory.hh  gridinfo.hh  gridpart.hh  gridview.hh  hierarchiciterator.hh  indexidset.hh  indexstack.hh  intersection.hh  intersectioniterator.hh  intersectioniteratorwrapper.hh  islocalref.fig  leafiterator.hh  leveliterator.hh  mapper.hh  mcmgmapper.hh  quadraturerules.cc  quadraturerules.hh  referenceelements.cc  referenceelements.hh  refinement.hh  scsgmapper.hh  sizecache.hh  universalmapper.hh  (+2 more)
grid/genericgeometry/: Makefile.am  cachedmapping.hh  codimtable.hh  conversion.hh  cornermapping.hh  genericgeometry.hh  genericreferenceelement.hh  geometricmapping.hh  geometry.hh  geometrytraits.hh  geometrytypes.hh  hybridgeometries.hh  hybridmapping.hh  loops.hh  mapping.hh  mappingprovider.hh  mappings.hh  matrix.hh  misc.hh  referencedomain.hh  referenceelements.hh  referencemappings.hh  referencetopologies.hh  subentities.hh  subgeometries.hh  subgeometry.hh  submapping.hh  subtopologies.hh  topologytypes.hh  traceprovider.hh
grid/geogrid/: Makefile.am  cache.hh  cachedcoordfunction.hh  capabilities.hh  coordfunction.hh  cornerstorage.hh  datahandle.hh  entity.hh  entitypointer.hh  grid.hh  hierarchiciterator.hh  identity.hh  idset.hh  indexsets.hh  intersection.hh  intersectioniterator.hh  iterator.hh  leafiterator.hh  leveliterator.hh  storage.hh
grid/geometrygrid/: Makefile.am  backuprestore.hh  datahandle.hh  entity.hh  entitypointer.hh  indexsets.hh  intersectioniterator.hh
grid/io/: Makefile.am
grid/onedgrid/: Makefile.am  gridtype.hh  onedgrid.cc  onedgridentity.hh  onedgridentitypointer.hh  onedgridfactory.cc  onedgridgeometry.hh  onedgridhieriterator.hh  onedgridindexsets.hh  onedgridleafiterator.hh  onedgridleveliterator.hh  onedgridlist.hh  onedintersectionit.hh
grid/sgrid/: Makefile.am  gridtype.hh  numbering.cc  numbering.hh  sgrid.cc
grid/test/: .gitignore  Makefile.am  alu-testgrid.hexa  alu-testgrid.tetra  alu-testgrid.triang  basicunitcube-2d.dgf  basicunitcube.hh  check-albertareader.cc  checkadaptation.cc  checkcommunicate.cc  checkgeometry.cc  checkgeometryinfather.cc  checkindexset.cc  checkintersectionit.cc  checkiterators.cc  checkpartition.cc  checktwists.cc  cube-testgrid-3-3-large.dgf  cube-testgrid-3-3.dgf  distorted-cube-3.dgf  examplegrid9.dgf.ALUgrid  functions.hh  grid-2-3.amc  gridcheck.cc  largegrid_alu.hexa  simplex-testgrid-1-1.dgf  simplex-testgrid-2-2.dgf  simplex-testgrid-2-3.dgf  simplex-testgrid-3-3-large.dgf  (+16 more)
lib/: .gitignore  CMakeLists.txt  Makefile.am  dunegridam2cmake.lib
m4/: CMakeLists.txt  Makefile.am  alberta.m4  alglib.m4  alugrid.m4  amiramesh.m4  dune_experimental_grid_extensions.m4  dune_extra_utils.m4  dune_grid.m4  dune_griddim.m4  dune_gridtype.m4  enable-old-numbering.m4  grape.m4  indexsetiterators.m4  psurface.m4  ug.m4
python/: CMakeLists.txt  setup.py.in
quadrature/: Makefile.am
(+1271 files in other folders)
