# $Id: Makefile.am 5184 2008-04-27 17:37:27Z christi $

ALLM4S = dune_grid.m4 dune_griddim.m4 alberta.m4 alglib.m4 alugrid.m4 ug.m4 amiramesh.m4 grape.m4 psurface.m4 enable-old-numbering.m4

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
