# $Id: Makefile.am 5184 2008-04-27 17:37:27Z christi $

ALLM4S =					\
	alberta.m4				\
	alglib.m4				\
	alugrid.m4				\
	amiramesh.m4				\
	dune_experimental_grid_extensions.m4	\
	dune_extra_utils.m4			\
	dune_grid.m4				\
	dune_griddim.m4				\
	dune_gridtype.m4			\
	grape.m4				\
	psurface.m4				\
	ug.m4

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
