MODULES =              \
  DuneGridMacros.cmake \
  FindAlberta.cmake    \
  FindALUGrid.cmake    \
  FindAmiraMesh.cmake  \
  FindGrape.cmake      \
  FindPsurface.cmake   \
  GridType.cmake       \
  UseUG.cmake

modulesdir = $(datadir)/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
