MODULES = \
  AddAlbertaFlags.cmake \
  AddAmiraMeshFlags.cmake \
  AddPsurfaceFlags.cmake \
  CheckExperimentalGridExtensions.cmake \
  DuneGridMacros.cmake \
  FindAlberta.cmake \
  FindAmiraMesh.cmake \
  FindPsurface.cmake \
  GridType.cmake \
  UseUG.cmake

modulesdir = $(datadir)/dune/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
