# $Id$

albertadir = $(includedir)/dune/grid/albertagrid/
alberta_HEADERS = agrid.hh albertagrid.cc \
  agmemory.hh albertaextra.hh albertaheader.hh \
  indexsets.hh referencetopo.hh datahandle.hh \
  griddim.hh  misc.hh  elementinfo.hh  meshpointer.hh macrodata.hh \
  dofadmin.hh  dofvector.hh  refinement.hh  coordcache.hh  level.hh \
  undefine-1.2.hh  undefine-2.0.hh  undefine-2.1.hh \
  entity.hh  entity.cc  entitypointer.hh \
  geometry.hh  geometry.cc  hierarchiciterator.hh \
  leveliterator.hh  leafiterator.hh  treeiterator.hh  treeiterator.cc \
  intersection.hh  intersection.cc  capabilities.hh \
  gridfactory.hh  dgfparser.hh  albertareader

include $(top_srcdir)/am/global-rules
